20081206 version: sdl-ada 1.2.13
20090417 code: large casing updates and parameter names/constants change
               to more literal equivalents.
20090417 code: Src* -> Source*
20090417 code: Dst* -> Target*
20091030 code: updated sysdeps to 3.0.0b
20091030 code: updated installer to 2.3.0
20091030 version: sdl-ada 1.2.14
20091031 code: updated installer to 2.3.1