@@ -3,7 +3,7 @@
 default: all
 
 all:\
-UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
+local UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
 UNIT_TESTS/c_size UNIT_TESTS/c_size.o ctxt/bindir.o ctxt/ctxt.a ctxt/dlibdir.o \
 ctxt/fakeroot.o ctxt/incdir.o ctxt/repos.o ctxt/slibdir.o ctxt/version.o \
 deinstaller deinstaller.o install-core.o install-posix.o install-win32.o \
@@ -31,6 +31,14 @@ install-dryrun: installer conf-sosuffix
 # Mkf-instchk
 install-check: instchk conf-sosuffix
 	./instchk
+
+# Mkf-local
+local: flags-sdl libs-sdl
+	./check-deps
+
+local_pre:
+local_clean:
+
 
 # Mkf-test
 tests:
@@ -342,7 +350,7 @@ sdl.o sdl.ali:\
 ada-compile sdl.adb sdl.ads
 	./ada-compile sdl.adb
 
-clean-all: sysdeps_clean tests_clean obj_clean ext_clean
+clean-all: sysdeps_clean tests_clean local_clean obj_clean ext_clean
 clean: obj_clean
 obj_clean:
 	rm -f UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali UNIT_TESTS/ada_size.o \
