@@ -7,3 +7,4 @@
 20091030 code: updated installer to 2.3.0
 20091030 version: sdl-ada 1.2.14
 20091031 code: updated installer to 2.3.1
+20091031 code: added check-deps to build.
